# HowToSea

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  mac_install.sh  nginx.conf  package-lock.json  package.json  requirements.txt
.github/workflows/: services_deployment.yml
auth/: Dockerfile  README.md  app.py  gunicorn.conf.py  requirements.txt  start.sh
auth/grpc_server/: AuthTokenValidation_pb2_grpc.py  server.py
auth/proto/: AuthTokenValidation_pb2.py
auth/src/: oauth.py  utils.py
functions/: package-lock.json  package.json
gRPC/: AuthTokenValidation.proto  README.md  pyproject.toml
gRPC/src/how_to_sea_GRPC_bindings.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lambda/: Dockerfile  docker-compose.yaml  main.py  push_image_to_prod.sh
location/: .env  Dockerfile  README.md  api.py  app.py  auth.py  db_client.py  gunicorn.conf.py  mongo_utils.py  push_image_to_prod.sh  requirements.txt  routes.py  search.py  utils.py
location/grpc_client/: AuthTokenValidation_pb2_grpc.py  client.py
location/proto/: AuthTokenValidation_pb2_grpc.py  client.py
location/protos/: tuto.proto  tuto_pb2.py  tuto_pb2_grpc.py
location/schema/: search_spot.json  spot.bson  spot.json
location/src/: auth.py  (+3 more)
nginx/: Dockerfile  README.md  nginx.conf  push_image_to_prod.sh  setup_local.sh  start.sh
terraform/: ecs_instance_user_data.sh  ecs_services.tf  main.tf  terraform.tfvars  variables.tf
user/: Dockerfile  main.py
webapp/: .env  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+62 files in other folders)
