[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "how_to_sea_GRPC_bindings"
version = "0.0.1"
authors = [
  { name="Jun Song", email="justin.warambourg@gmail.com" },
]
description = "A internal project to easily access the GRPC bindings for the How to Sea project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = []

[project.urls]
Homepage = "https://github.com/early-riser18/HowToSea"
Issues = "https://github.com/early-riser18/HowToSea/issues"